# cross-uname

./: Cargo.toml  readme.md
examples/: uname.rs
src/: lib.rs  unix.rs  win.rs
