[package]
name = "cross-uname"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ahaoboy/cross-uname"
license = "MIT"
description = "cross-uname"
homepage = "https://github.com/ahaoboy/cross-uname"
authors = ["ahaoboy"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"
